--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/ui-developer-c5BjXi-Ayr6AP8aKiznY58'>UI Developer #0671 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584492'>Stellenangebot: UI/UX Designer (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -64,7 +68,7 @@
 <p><span class="badge badge-light">Jakarta Selatan, Indonesia  Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4497947002'>Job Application for UX/UI Design Coach, London at Flatiron School</a></h5> 
+<h5><a href='https://boards.greenhouse.io/flatironschoolcareers/jobs/4497947002'>Job Application for UX/UI Design Coach, London at Flatiron School</a></h5> 
 <p><span class="badge badge-light">London London  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -80,7 +84,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694160012-ux-ui-product-designer-mid-level-or-senior-number-1-tech-company'>Fulton Garrick Ltd UX/UI PRODUCT DESIGNER (MID-LEVEL OR SENIOR)  - NUMBER 1 TECH COMPANY | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694160012-ux-ui-product-designer-mid-level-or-senior-number-1-tech-company'>Fulton Garrick Ltd UX/UI PRODUCT DESIGNER (MID-LEVEL OR SENIOR)  - NUMBER 1 TECH COMPANY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -110,7 +114,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=twitter'>
       Designer VUI/UX at New York Public Radio - Anywhere - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
@@ -142,7 +146,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OUICAREGROUP/743999698316474-assistant-e-d-agence'>OUI CARE GROUP Assistant(e) d'agence | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/OUICAREGROUP/743999698316474-assistant-e-d-agence'>OUI CARE GROUP Assistant(e) d'agence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France  France France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -299,7 +303,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Colombo, Sri Lanka  Australia Colombo, Sri Lanka</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tui.join.com/jobs/463583-business-intelligence-specialist-m-w-d'>Job @ TUI Austria Holding (Wien): Business Intelli... | JOIN</a></h5> 
+<h5><a href='https://tui.join.com/jobs/463583-business-intelligence-specialist-m-w-d'>Job @ TUI Austria Holding (Wien): Business Intelli... | JOIN</a></h5> 
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -379,7 +383,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6406771/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6406771</a></h5> 
+<h5><a href='https://www.greatinsurancejobs.com/job/6406771/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6406771</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -455,16 +459,12 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/phlebotomy-technician-ii-pediatric-specialty-clinic-location-5591'>Phlebotomy Technician II - Pediatric Specialty Clinic Location - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/phlebotomy-technician-ii-pediatric-specialty-clinic-location-5591'>Phlebotomy Technician II - Pediatric Specialty Clinic Location - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/medical-assistant-ii-holden-comprehensive-cance-center-clinic-5583'>Medical Assistant II- Holden Comprehensive Cance Center Clinic - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/medical-assistant-ii-uicc-cedar-rapids-family-medicine-and-pediatric-clinic-5584'>Medical Assistant II- UICC Cedar Rapids Family Medicine and Pediatric Clinic - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
