Trade Me Careers - Product Manager - Senior. Omio Senior Product Manager Flights/Air (m / f / d) | SmartRecruiters. InnerWorkings Careers - Senior Agile Product Owner. Product Designer, Spotify Free | PRODUCTHIRE.NET. Senior Product Manager, Legal Systems | PRODUCTHIRE.NET. Job Application for Sr, Product Owner (Fulfillment and Transportation Systems) at Coupang. Partners Internal Quality Control Senior Product Manager | SmartRecruiters. TRICENTIS Product Owner SAP | SmartRecruiters. Biogen Portfolio Product Manager | SmartRecruiters. Job Application for Product Designer at Tubi. AdSmart Product Manager at Sky. Product Manager- Agent UX at Squad. Vroom - Sr. Product Manager (Data & API Platforms). Online Learning Product Manager - Study Group - Career Page. SoFi Careers - Staff Product Designer.       Product Manager - xneelo     . Senior Product Manager (for Healthcare App) - Mavis. Job Application for Senior Product Manager at Twitch. Omio Senior Product Manager, Monetisation (m / f / d) | SmartRecruiters. Job Application for Associate Product Manager at Industrious. Jobvite, Inc. Careers - Senior AI Product Manager. Senior Product Designer | PRODUCTHIRE.NET. Junior Product Designer (M/F) Job in Zurich, Switzerland. WP Engine Careers - Product Manager. Allegro Product Manager - Katalog Produktów | SmartRecruiters.       Product ManagerIn / Product Owner(w/m/d) - :beyli     . Carrières Trek Bicycle - Trip Design Product Manager. Guidewire Software, Inc. Careers - Senior Product Manager, Digital Apps - Dublin, Ireland. Gloo - Associate Product Owner. Guidewire Software, Inc. Careers - Senior Product Manager - Dublin, Ireland. The Climate Corporation Careers - Group Product Manager, US Regional Lead. BlueJeans Careers - Senior Product Manager. Job @ Fincite (Frankfurt am Main): Product Owner -... | JOIN. SugarCRM Careers - Senior Product Manager, Cloud Platform. Job Application for Product Designer (f/m/d) at SHARE NOW. Fulton Garrick Ltd PRODUCT MANAGER - SOFTWARE &

--- a/product-manager.html
+++ b/product-manager.html
@@ -40,19 +40,31 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://producthire.net/job/product-designer-spotify-free/'>Product Designer, Spotify Free | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trademe/job/o2rrbfwP'>Trade Me Careers - Product Manager - Senior</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698374989-senior-product-manager-flights-air-m-f-d-'>Omio Senior Product Manager Flights/Air (m / f / d) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/innerworkings/job/olz7afwV'>InnerWorkings Careers - Senior Agile Product Owner</a></h5> 
+<p><span class="badge badge-light">Prague, Czech Republic</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://producthire.net/job/product-designer-spotify-free/'>Product Designer, Spotify Free | PRODUCTHIRE.NET</a></h5> 
+<p><span class="badge badge-light">New York, USA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://producthire.net/job/senior-product-manager-legal-systems/'>Senior Product Manager, Legal Systems | PRODUCTHIRE.NET</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, USA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/coupang/jobs/1927050'>Job Application for Sr, Product Owner (Fulfillment and Transportation Systems) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698364962-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698364962-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -188,7 +200,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/snapdocs/f3a4f1a5-1da6-44bb-a009-09d2d283a2d4'>Snapdocs, Inc. - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/snapdocs/f3a4f1a5-1da6-44bb-a009-09d2d283a2d4'>Snapdocs, Inc. - Product Manager</a></h5> 
 <p><span class="badge badge-light">Denver  Denver Denver Denver</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -196,7 +208,7 @@
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/prowlerio/jobs/4486296002'>Job Application for Senior UX /  Product Designer at PROWLER.io</a></h5> 
+<h5><a href='https://boards.greenhouse.io/prowlerio/jobs/4486296002'>Job Application for Senior UX /  Product Designer at PROWLER.io</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -204,7 +216,7 @@
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.invokegeek.com/jobs/product-manager-adobe-com/'>Product Manager ? Adobe.com ? invokeGeek</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.invokegeek.com/jobs/product-manager-adobe-com/'>Product Manager ? Adobe.com ? invokeGeek</a></h5> 
 <p><span class="badge badge-light">United States  San Jose, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -445,22 +457,6 @@ Pushing the boundaries of what's possible in advanced machine learning?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698274435--senior-product-manager-in-cloud-security-solutions'>Bosch Group (Senior) Product Manager*in ? Cloud Security Solutions | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://getsimpl.recruiterbox.com/jobs/fk01ayx/'>
-    Product Designer at Simpl
-</a></h5> 
-<p><span class="badge badge-light">Bengaluru</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/loftium/64db8e51-e27e-49e9-b90c-55d8c5246ca8'>Loftium - Senior Product Manager</a></h5> 
-<p><span class="badge badge-light">Seattle, WA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://yerdle.recruiterbox.com/jobs/fk03io1'>
-    Associate Product Manager at Yerdle
-</a></h5> 
-<p><span class="badge badge-light">Brisbane California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
